[project]
name = "sqlalchemy-history"
version = "0.1.0"
description = "Lightweight async-compatible audit history for SQLAlchemy 2.0+"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Paddy Natte" },
]
keywords = ["sqlalchemy", "audit", "history", "versioning", "async"]
dependencies = [
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"